# oauth2-registration-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  buildAndPush.sh  cloudbuild.yaml  pipelinerun.yaml  readme.md
backend/: .env  Cargo.toml  buildAndPush.sh
backend/src/: db.rs  handlers.rs  main.rs  models.rs
frontend/: Cargo.toml  index.html
frontend/src/: authorize.rs  home.rs  login.rs  main.rs  navigation.rs  pricing.rs  register.rs  success.rs
helm/: Chart.yaml  dev-values.yaml  values.yaml
helm/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  pipeline.yaml  service.yaml  serviceaccount.yaml
knative/: service.yaml
src/: db.rs  handlers.rs  main.rs  models.rs
static/: authorize.html  authorize.js  index.html  login.css  login.js  success.html
tekton/: pipelinerun.yaml
