[package]
name = "registration-server"
version = "0.1.0"
authors = ["Robert Lemmens <rj.lemmens@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
warp = "0.3.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0.25"
chrono = "0.4.19"
dotenv = "0.15.0"
rand = "0.8.3"
config = "0.10.1"
base64 = "0.13.0"
deadpool-postgres = "0.9.0"
tokio-postgres = { version = "0.7.0", features = [ "with-chrono-0_4" ]}
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
