[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_json = "1.0.79"
yew = "0.19.3"
yew-router = "0.16.0"
reqwest = { version = "0.11.9", features = ["json"] }
reqwasm = "0.4.1"
web-sys = "0.3.56"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
log = "0.4.14"
wasm-logger = "0.2.0"